style: estilização de fonts, cores

--- a/index.html
+++ b/index.html
@@ -5,36 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>@import url(css/style.css);</style>
-    <title>Incolume</title>
+    <title>JEDI - Incolume</title>
 </head>
 <body>
     <header>
         <aside>
-            <img src="img/Logo_incolume.png" alt="logo">
+            <a href="http://incolume.com.br"><img src="img/Logo_incolume.png" alt="logo"></a>
         </aside>
         <section>
-            Incolume treinamentos
-            <nav>
-                <a href="#">blog</a>
-                <a href="#"></a>
-            </nav>
+            <a href="http://incolume.com.br" >Incolume treinamentos</a>
         </section>
     </header>
     <main>
         <aside>
-            <img src='img/jedi-order-brands.svg'>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                <!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                <path d="M398.5 373.6c95.9-122.1 17.2-233.1 17.2-233.1 45.4 85.8-41.4 170.5-41.4 170.5 105-171.5-60.5-271.5-60.5-271.5 96.9 72.7-10.1 190.7-10.1 190.7 85.8 158.4-68.6 230.1-68.6 230.1s-.4-16.9-2.2-85.7c4.3 4.5 34.5 36.2 34.5 36.2l-24.2-47.4 62.6-9.1-62.6-9.1 20.2-55.5-31.4 45.9c-2.2-87.7-7.8-305.1-7.9-306.9v-2.4 1-1 2.4c0 1-5.6 219-7.9 306.9l-31.4-45.9 20.2 55.5-62.6 9.1 62.6 9.1-24.2 47.4 34.5-36.2c-1.8 68.8-2.2 85.7-2.2 85.7s-154.4-71.7-68.6-230.1c0 0-107-118.1-10.1-190.7 0 0-165.5 99.9-60.5 271.5 0 0-86.8-84.8-41.4-170.5 0 0-78.7 111 17.2 233.1 0 0-26.2-16.1-49.4-77.7 0 0 16.9 183.3 222 185.7h4.1c205-2.4 222-185.7 222-185.7-23.6 61.5-49.9 77.7-49.9 77.7z"/>
+            </svg>
         </aside>
         <section>
-            <H1>JEDI - Junta Especializada de Desenvolvimento e Inovação</H1>
+            <H1>JEDI</H1>
+            <h2>Junta Especializada de Desenvolvimento e Inovação</H2>
             <ul>
-                <li><img src="img/blogger-brands.svg" alt="blog"></li>
-                <li><img src="img/youtube-brands.svg" alt="youtube"></li>
-                <li><img src="img/discord-brands.svg" alt="discord"></li>
-                <li><img src="img/slack-brands.svg" alt="slack"></li>
-                <li><img src="img/telegram-brands.svg" alt="telegram"></li>
-                <li><img src="img/whatsapp-brands.svg" alt="whatsup"></li>
-                <li><img src="img/chalkboard-user-solid.svg" alt="classroom"></li>
-
+                <li><a href="#"> <img src="img/blogger-brands.svg" alt="blog"> </a></li>
+                <li><a href="#"> <img src="img/youtube-brands.svg" alt="youtube"> </a></li>
+                <li><a href="#"> <img src="img/discord-brands.svg" alt="discord"> </a></li>
+                <li><a href="#"> <img src="img/slack-brands.svg" alt="slack"> </a></li>
+                <li><a href="#"> <img src="img/telegram-brands.svg" alt="telegram"> </a></li>
+                <li><a href="#"> <img src="img/whatsapp-brands.svg" alt="whatsup"> </a></li>
+                <li><a href="#"> <img src="img/chalkboard-user-solid.svg" alt="classroom"> </a></li>
             </ul>
         </section>
     </main>
