style: Update layout

--- a/index.html
+++ b/index.html
@@ -25,15 +25,17 @@
         </aside>
         <section>
             <H1>JEDI</H1>
-            <h2>Junta Especializada de Desenvolvimento e Inovação</H2>
+            <h2><span>J</span>unta <span>E</span>specializada de <span>D</span>esenvolvimento e <span>I</span>novação</H2>
             <ul>
-                <li><a href="#"> <img src="img/blogger-brands.svg" alt="blog"> </a></li>
-                <li><a href="#"> <img src="img/youtube-brands.svg" alt="youtube"> </a></li>
-                <li><a href="#"> <img src="img/discord-brands.svg" alt="discord"> </a></li>
+                <li><a href="http://blog.brito.incolume.com.br"> <img src="img/blogger-brands.svg" alt="blog"> </a></li>
+                <li><a href="https://www.youtube.com/channel/UCVpvuVo4YcoAZGqZWpJ7SIA/videos"> <img src="img/youtube-brands.svg" alt="youtube"> </a></li>
+                <li><a href="https://discord.gg/ZrvgwRPC4v"> <img src="img/discord-brands.svg" alt="discord"> </a></li>
                 <li><a href="#"> <img src="img/slack-brands.svg" alt="slack"> </a></li>
-                <li><a href="#"> <img src="img/telegram-brands.svg" alt="telegram"> </a></li>
+                <li><a href="https://t.me/+dGP7wG9DN2g3ZjUx"> <img src="img/telegram-brands.svg" alt="telegram"> </a></li>
                 <li><a href="#"> <img src="img/whatsapp-brands.svg" alt="whatsup"> </a></li>
-                <li><a href="#"> <img src="img/chalkboard-user-solid.svg" alt="classroom"> </a></li>
+                <li><a href="https://classroom.google.com/"> <img src="img/chalkboard-user-solid.svg" alt="classroom"> </a></li>
+                <li><a href="#"> <img src="img/certificate-svgrepo-com.svg" alt="certificate"> </a></li>
+
             </ul>
         </section>
     </main>
